2000-08-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: '99k6, and manually fix configure.

	* include/ntp_request.h (NTP_MAXHOSTNAME): 144 -> 32

2000-08-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Don't call fclose if stream is NULL.

2000-08-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/driver35.htm: 
	* ntpd/refclock_pcf.c: Updates and improvements
	From: Andreas Voegele <andreas.voegele@gmx.de>

	* configure.in (ac_cv_struct_ntptimeval): Lose the TAI check - we
	don't need it since we can check NTP_API.  Re-hack the generated
	configure script.

	* configure: Manual hack to the ntptimeval.time.tv_nsec stuff
	because we're running an old autoconf.

2000-08-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntptime.c: Use: HAVE_STRUCT_NTPTIMEVAL_TIME_TV_NSEC, it's
	the standard name.

	* configure.in: Look for struct ntptimeval.tai in sys/timex.h
	Cleanup struct tptimeval member tests.

	* util/ntp-genkeys.c: New command-line arguments

2000-08-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): More small steps...

2000-08-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_crypto.c (crypto_rsa): Now that we're using
	NTP_KEYSDIR, make sure there is a '/ between the dir and the file.

	* util/ntp-genkeys.c (main): More small steps...

2000-08-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Another small step...

	* configure.in: 99k5

	* include/ntp_request.h: Make data[] member of req_pkt 32 again.
	Bump the version number...

	* ntpd/ntp_loopfilter.c (local_clock): Change 0. to 0 in a couple
	of places.
	From Dave Mills

2000-08-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Minimal progress...

2000-08-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/check_y2k.c: Make debug definition match ntpd.h's declaration

	* ntpd/Makefile.am (check-local): Use test in favor of [

2000-08-05  Harlan Stenn  <stenn@whimsy.udel.edu>
